# mindex

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  TODO.md  package.json
assets/: app.js  style.css  sw.js  theme.js
assets/features/: abc_render.js  agent.js  editor_paste_upload.js  file_manage.js  file_move.js  fuzzy.js  fuzzy.test.mjs  magent.js  palette.js  push_subscribe.js  pwa_refresh.js  reorder.js  sw_register.js  todo_toggle.js  uploads.js
docs/: INVARIANTS.md
docs/Archive/: Authentication.md  DesignBrainstorm.md  MVP_SPEC.md  ModuleLayoutRefactor.md
docs/Projects/: 001-MathRendering.md  003-JsStructureRefactor.md  005-Charts.md  006-ImageUploads.md  008-PWARefreshButton.md  011-CodeSyntaxHighlighting.md  013-DirectoryBrowser.md  014-VisualFacelift.md  017-SplitDocuments.md  018-FileUploads.md  019-MagentRendering.md  020-AgentView.md  021-FileMoveDragDrop.md  022-FileDeletion.md  023-GitDiffAndRevert.md  024-GitDiffMarkerSimplification.md  025-FuzzyFileSearch.md  ABCNotation.md  AnchorLinks.md  Authentication.md  Charts.md  CodeSyntaxHighlighting.md  DirectoryBrowser.md  DirectoryBrowserUX.md  EngineeringExcellence.md  FileTypeSupport.md  GitIntegration.md  GitPushPull.md  ImageUploads.md  JsStructureRefactor.md  MathRendering.md  ModuleLayoutRefactor.md  PdfSupport.md  PushNotifications.md  TODO.md  (+3 more)
sample-root/: README.md  itinerary.md  tickets.md
src/: adapters.rs  app.rs  assets.rs  auth.rs  cli.rs  config.rs  directives.rs  documents.rs  fs.rs  git.rs  html.rs  lib.rs  main.rs  math.rs  ports.rs  push.rs  state.rs  templates.rs  test_support.rs  types.rs  uploads.rs
static/: manifest.json  style.css  sw.js
templates/: agent.html  base.html  document.html  document_list.html  edit.html  file_manage.html  file_move.html  git.html  login.html  manifest.json  new.html  pdf.html  push_subscribe.html  reorder.html  search.html  sw.js  text_edit.html  text_view.html  upload.html
(+46 files in other folders)
