[package]
name = "mindex"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
