[package]
name = "mindex"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
axum = "0.8"
base64 = "0.13"
clap = { version = "4", features = ["derive", "env"] }
jwt-simple = "0.11"
pulldown-cmark = "0.13"
latex2mathml = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
web-push = "0.9"
gix = "0.66"
imara-diff = "0.1"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
